force-app/main/default/objects/KimbleOne__OutboundInterfaceRequestPending__c/KimbleOne__OutboundInterfaceRequestPending__c.object-meta.xml
<CustomObject>
    <label>Outbound Interface Request Pending</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Outbound Interface Request Pending Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Interface Requests Pending</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>