force-app/main/default/objects/KimbleOne__OutboundInterfaceRequestPending__c/fields/KimbleOne__ContextId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContextId__c</fullName>
    <label>ContextId</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>