force-app/main/default/objects/KimbleOne__OutboundInterfaceRequestPending__c/fields/KimbleOne__InterfaceSource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InterfaceSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interface Source</label>
    <referenceTo>KimbleOne__InterfaceSource__c</referenceTo>
    <relationshipLabel>Outbound Interface Requests Pending</relationshipLabel>
    <relationshipName>OutboundInterfaceRequestsPending</relationshipName>
    <type>Lookup</type>
</CustomField>