force-app/main/default/objects/KimbleOne__OutboundInterfaceRequestPending__c/fields/KimbleOne__RawData__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RawData__c</fullName>
    <label>RawData</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>